Fix macOS native app bundle